hphp/hack/test/typecheck/higher_kinded_types/simple_kinds_generic.php.rust_elab.exp
File "simple_kinds_generic.php", line 5, characters 22-22:
Please make your type parameter start with the letter `T` (capital) (Naming[2042])
File "simple_kinds_generic.php", line 7, characters 39-39:
Please make your type parameter start with the letter `T` (capital) (Naming[2042])
File "simple_kinds_generic.php", line 10, characters 9-13:
Wrong number of type arguments (expected 1, got 0) (Typing[4101])
  File "simple_kinds_generic.php", line 7, characters 16-20:
  Definition is here
File "simple_kinds_generic.php", line 12, characters 9-26:
Wrong number of type arguments (expected 2, got 3) (Typing[4101])
  File "simple_kinds_generic.php", line 7, characters 26-30:
  Definition is here
File "simple_kinds_generic.php", line 14, characters 20-22:
This is a fully-applied type, but a type constructor expecting a single (fully-applied) type argument was expected here. (Typing[4383])
  File "simple_kinds_generic.php", line 7, characters 36-37:
  We are expecting a type constructor expecting a single (fully-applied) type argument due to the definition of T4 here.
File "simple_kinds_generic.php", line 16, characters 20-24:
This is a type constructor of kind Type -> (Type -> Type) -> Type, but a type constructor expecting a single (fully-applied) type argument was expected here. (Typing[4383])
  File "simple_kinds_generic.php", line 7, characters 36-37:
  We are expecting a type constructor expecting a single (fully-applied) type argument due to the definition of T4 here.
